crates/reinhardt-pages/tests/ui/page/pass/conditional.rs
//! page! macro with conditional rendering (if/else)

use reinhardt_pages::page;

fn main() {
	// Simple if
	let _with_if = __reinhardt_placeholder__!(/*0*/);

	// If/else
	let _if_else = __reinhardt_placeholder__!(/*1*/);

	// Nested if
	let _nested_if = __reinhardt_placeholder__!(/*2*/);
}
