crates/reinhardt-pages/tests/ui/page/fail/boolean_attr_string_false.rs
//! page! macro with boolean attribute having string literal "false"

use reinhardt_pages::page;

fn main() {
	let _invalid = __reinhardt_placeholder__!(/*0*/);
}
